--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-# Compiled class file
+# Built Files
 *.class
+/out/
+/bin/
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+# Virtual Vachine crash logs,
+# See http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Intellij
+*.iml
+/.idea/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.ear
@@ -18,5 +22,5 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# mpeltonen/sbt-idea plugin
+/.idea_modules/
