--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_45"/>
-	<classpathentry kind="output" path="out"/>
+<?xml version="1.0" encoding="UTF-8"?><classpath>
+<classpathentry kind="src" path="src"/>
+<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_45"/>
+<classpathentry kind="output" path="out"/>
+<classpathentry kind="lib" path="lib/org.apache.logging.log4j2/log4j-api-2.11.0.jar"/>
+<classpathentry kind="lib" path="lib/org.apache.logging.log4j2/log4j-core-2.11.0.jar"/>
 </classpath>
