--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,12 @@ hs_err_pid*
 /.idea_modules/
 
 # Eclipse Files #
-# .project
-# .classpath
+.project
+.classpath
 
 # Intellij Files #
-# *.iml
-# /.idea/
-/.idea/codeStyles/
-.idea/compiler.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/uiDesigner.xml
-.idea/vcs.xml
-.idea/workspace.xml
+*.iml
+/.idea/
 
 # Built Files #
 *.class
