--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,40 @@
+#######################################
 # Virtual Vachine crash logs, #
 # See http://www.java.com/en/download/help/error_hotspot.xml #
 hs_err_pid*
+#######################################
 
+#######################################
 # mpeltonen/sbt-idea plugin #
 /.idea_modules/
+#######################################
 
+#######################################
 # Eclipse Files #
 .project
 .classpath
+#######################################
 
+#######################################
 # Intellij Files #
 #*.iml
 /.idea/
+#######################################
 
+#######################################
 # Built Files #
 *.class
 out/
+#######################################
 
+#######################################
 # Logs Files #
 *.log
 *.log.gz
 /.logs/
+#######################################
 
+#######################################
 # Package Files #
 # *.jar
 *.zip
@@ -29,6 +42,9 @@ out/
 *.ear
 *.tar.gz
 *.rar
+#######################################
 
+#######################################
 # Resources #
-#apache-log4j-2.11.0-bin.zip
+apache-log4j-2.11.0-bin.zip
+#######################################
