--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ hs_err_pid*
 /.idea_modules/
 
 #### Eclipse Files ####
-.project
-.classpath
+#.project
+#.classpath
 
 #### Intellij Files ####
 #*.iml
@@ -32,7 +32,3 @@ out/
 
 #### Resources ####
 /resources/
-
-#### Libraries Jar ####
-!/lib/org.apache.logging.log4j2/log4j-api-2.11.0.jar
-!/lib/org.apache.logging.log4j2/log4j-core-2.11.0.jar
