增加了Gradle支持

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,7 @@
 #### See http://www.java.com/en/download/help/error_hotspot.xml ####
 hs_err_pid*
 
-#### mpeltonen/sbt-idea plugin ####
-/.idea_modules/
-
-#### Eclipse Files ####
-#.project
-#.classpath
-
 #### Intellij Files ####
-#*.iml
 /.idea/
 
 #### Built Files ####
@@ -18,8 +10,6 @@ hs_err_pid*
 out/
 
 #### Logs Files #####
-*.log
-*.log.gz
 /.logs/
 
 #### Package Files ####
@@ -30,5 +20,5 @@ out/
 *.tar.gz
 *.rar
 
-#### Resources ####
-/resources/
+#### Gradle Files ####
+/.gradle/
