--- a/build.gradle
+++ b/build.gradle
@@ -7,22 +7,16 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url "http://mvnrepository.com/" }
-    
-    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-
+    maven { url "http://mvnrepository.com/"  }
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     flatDir {
-        dirs 'lib'
+        dirs 'libs'
     }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: 'latest.intergration'
-    compile group: 'com.google.guava', name: 'guava', version: 'latest.intergration-jre'
     compile group: 'com.google.code.gson', name: 'gson', version: 'latest.intergration'
-    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: 'latest.intergration'
-    compile group: 'joda-time', name: 'joda-time', version: 'latest.intergration'
-    compile group: 'org.jsoup', name: 'jsoup', version: 'latest.intergration'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: 'latest.integration'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: 'latest.integration'
 }
